--- a/package.json
+++ b/package.json
@@ -1,35 +1,30 @@
 {
-  "description": "A foundation for scalable desktop apps",
+  "description": "Hardware and Uncover Game POCs",
   "keywords": [
     "electron",
-    "boilerplate",
+    "hatch",
     "react",
-    "typescript",
-    "ts",
-    "sass",
-    "webpack",
-    "hot",
-    "reload"
+    "typescript"
   ],
-  "homepage": "https://github.com/electron-react-boilerplate/electron-react-boilerplate#readme",
+  "homepage": "",
   "bugs": {
-    "url": "https://github.com/electron-react-boilerplate/electron-react-boilerplate/issues"
+    "url": ""
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/electron-react-boilerplate/electron-react-boilerplate.git"
+    "url": ""
   },
   "license": "MIT",
   "author": {
-    "name": "Electron React Boilerplate Maintainers",
-    "email": "electronreactboilerplate@gmail.com",
-    "url": "https://electron-react-boilerplate.js.org"
+    "name": "Hatch and Tricon",
+    "email": "hatchhardware@uncover.com",
+    "url": ""
   },
   "contributors": [
     {
-      "name": "Amila Welihinda",
-      "email": "amilajack@gmail.com",
-      "url": "https://github.com/amilajack"
+      "name": "Tricon Bangalore",
+      "email": "tricon@paywheel.com",
+      "url": ""
     }
   ],
   "main": "./src/main/main.ts",
@@ -111,6 +106,8 @@
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.7",
     "electron-updater": "^5.0.3",
+    "phaser": "^3.55.2",
+    "phaser3-rex-plugins": "^1.1.71",
     "react": "^18.1.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.1.0",
@@ -185,8 +182,8 @@
     "webpack-merge": "^5.8.0"
   },
   "build": {
-    "productName": "Hardware POCs V2",
-    "appId": "org.erb.HardwarePOCsV2",
+    "productName": "HardwareUncoverGame",
+    "appId": "org.erb.HardwareUncoverGame",
     "asar": true,
     "asarUnpack": "**\\*.{node,dll}",
     "files": [
